# opengl-model-viewer

./: C++.gitignore  CMakeLists.txt  FrameCounter.cpp  FrameCounter.h  Mesh.cpp  Model.cpp  Model.h  README.md  Shader.cpp  Shader.h  Window.cpp  Window.h  app  camera.cpp  camera.h  drawable_mesh.cpp  drawable_mesh.h  drawable_model.cpp  frame_counter.cpp  glad.c  interpolation.h  main.cpp  mesh.cpp  mesh.h  property_inspector.cpp  property_inspector.h  shader.cpp  window.cpp  window.h
Shaders/: basic.frag  basic.vert  color.vert
app.dSYM/Contents/Resources/DWARF/: app
dependencies/include/glad/: glad.h
dependencies/include/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_internal.h  imgui_tables.cpp
src/: camera.cpp  camera.h  drawable_mesh.cpp  drawable_model.cpp  drawable_model.h  frame_counter.cpp  frame_counter.h  primitives.cpp  primitives.h  property_inspector.cpp  property_inspector.h  shader.cpp  shader.h  window.cpp
